fixing media paths

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,7 @@
     --color-rose-500: hsl(12, 20%, 44%);
     --color-rose-900: hsl(14, 65%, 9%);
 }
+
+body {
+    background-color: hsl(13, 31%, 94%);
+}
